--- a/sheet.html
+++ b/sheet.html
@@ -15,7 +15,7 @@
         <header id="sheet_header">
             <img src="http://cdn0.vox-cdn.com/assets/4510675/10258980_10152398165651071_9160598520303222803_o__1_.png">
             <player-name></player-name>
-            <button type="menu" v-on:click="exportCharacter">Export Character</button>
+            <button v-on:click="exportCharacter">Export Character</button>
         </header>
 
         <section id="character_info">
