--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html>
 
 <head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/index-style.css"></link>
 </head>
 
 <body>
-    <h2>Hola</h2>
+    <header>
+        <div class="header-banner well">epic rpg sheet manager</div>
+    </header>
+    <section>
+        <div class="index-module">
+            <div class="index-module-item">
+                <button class="btn-lg btn-success">Create New Character</button>
+            </div>
+            <div class="index-module-item">
+                <button class="btn-lg btn-info">Upload an Existing Character</button>
+            </div>
+        </div>
+        <div class="image-bg-class"></div>
+    </section>
 </body>
 
 </html>
