--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <section>
         <div class="index-module">
             <div class="index-module-item">
-                <button class="btn-lg btn-success">Create New Character</button>
+                <a href="sheet.html"><button class="btn-lg btn-success" href="sheet.html">Create New Character</button></a>
             </div>
             <div class="index-module-item">
-                <button class="btn-lg btn-info">Upload an Existing Character</button>
+                <button class="btn-lg , btn-info" id="file-select">Upload an Existing Character<input type="file"></button>
             </div>
         </div>
         <div class="image-bg-class"></div>
+        <!-- this is the container that allows the background image to have trasparency w/out affecting the buttons -->
+
     </section>
 </body>
 
