ability flexbox completed

--- a/sheet.html
+++ b/sheet.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Sheet</title>
+    <script src="https://use.fontawesome.com/6dae66386a.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style/style.css"></link>
 </head>
@@ -138,37 +139,37 @@
                             <div><input type="text" class="abil_input" v-model="strMod" disabled></div>
                             <div><input type="text" class="abil_input" v-model="strMod_lvl" disabled></div>
                         </div>
-                        <tr>
-                            <td><input type="text" class="abil_input" v-model="constitution"></td>
-                            <td class="ability-tag well">con</td>
-                            <td><input type="text" class="abil_input" v-model="conMod" disabled></td>
-                            <td><input type="text" class="abil_input" v-model="conMod_lvl" disabled></td>
-                        </tr>
-                        <tr>
-                            <td><input type="text" class="abil_input" v-model="dexterity"></td>
-                            <td class="ability-tag well">dex</td>
-                            <td><input type="text" class="abil_input" v-model="dexMod" disabled></td>
-                            <td><input type="text" class="abil_input" v-model="dexMod_lvl" disabled></td>
-                        </tr>
-                        <tr>
-                            <td><input type="text" class="abil_input" v-model="intelligence"></td>
-                            <td class="ability-tag well">int</td>
-                            <td><input type="text" class="abil_input" v-model="intMod" disabled></td>
-                            <td><input type="text" class="abil_input" v-model="intMod_lvl" disabled></td>
-                        </tr>
-                        <tr>
-                            <td><input type="text" class="abil_input" v-model="wisdom"></td>
-                            <td class="ability-tag well">wis</td>
-                            <td><input type="text" class="abil_input" v-model="wisMod" disabled></td>
-                            <td><input type="text" class="abil_input" v-model="wisMod_lvl" disabled></td>
-                        </tr>
-                        <tr>
-                            <td><input type="text" class="abil_input" v-model="charisma"></td>
-                            <td class="ability-tag well">cha</td>
-                            <td><input type="text" class="abil_input" v-model="chaMod" disabled></td>
-                            <td><input type="text" class="abil_input" v-model="chaMod_lvl" disabled></td>
-                        </tr>
-                    </div container>
+                        <div class="ability-flex-container-sub">
+                            <div><input type="text" class="abil_input" v-model="constitution"></div>
+                            <div class="ability-tag well">con</div>
+                            <div><input type="text" class="abil_input" v-model="conMod" disabled></div>
+                            <div><input type="text" class="abil_input" v-model="conMod_lvl" disabled></div>
+                        </div>
+                        <div class="ability-flex-container-sub">
+                            <div><input type="text" class="abil_input" v-model="dexterity"></div>
+                            <div class="ability-tag well">dex</div>
+                            <div><input type="text" class="abil_input" v-model="dexMod" disabled></div>
+                            <div><input type="text" class="abil_input" v-model="dexMod_lvl" disabled></div>
+                        </div>
+                        <div class="ability-flex-container-sub">
+                            <div><input type="text" class="abil_input" v-model="intelligence"></div>
+                            <div class="ability-tag well">int</div>
+                            <div><input type="text" class="abil_input" v-model="intMod" disabled></div>
+                            <div><input type="text" class="abil_input" v-model="intMod_lvl" disabled></div>
+                        </div>
+                        <div class="ability-flex-container-sub">
+                            <div><input type="text" class="abil_input" v-model="wisdom"></div>
+                            <div class="ability-tag well">wis</div>
+                            <div><input type="text" class="abil_input" v-model="wisMod" disabled></div>
+                            <div><input type="text" class="abil_input" v-model="wisMod_lvl" disabled></div>
+                        </div>
+                        <div class="ability-flex-container-sub">
+                            <div><input type="text" class="abil_input" v-model="charisma"></div>
+                            <div class="ability-tag well">cha</div>
+                            <div><input type="text" class="abil_input" v-model="chaMod" disabled></div>
+                            <div><input type="text" class="abil_input" v-model="chaMod_lvl" disabled></div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
